--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>Draw Square with JavaScript</title>
+  <link rel="stylesheet" href="assets/css/stylesheet.css">
 </head>
 <body>
-<script src="assets/js/script.js"></script>
-    <canvas id="myCanvas" width="300" height="300" style="border:1px solid #000000;"></canvas>
 
+    <canvas id="myCanvas" width="1000" height="1000" style="border:1px solid #000000;"></canvas>
+<script src="assets/js/script.js"></script>
  
 
 </body>
