--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 
-    <canvas id="myCanvas" width="1000" height="1000" style="border:1px solid #000000;"></canvas>
-<script src="assets/js/script.js"></script>
+<canvas id="myCanvas" width="1000" height="1000" style="border:1px solid #000000;"></canvas>
+<script type="module" src="assets/js/script.js"></script>
  
 
 </body>
